Started working on UI and getting basic UI Structure down

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,10 @@ pluginManagement {
         google()
         mavenCentral()
     }
+    plugins {
+        id("org.gradle.toolchains.foojay-resolver-convention") version("0.7.0")
+        id 'org.jetbrains.kotlin.android' version '1.9.0'
+    }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
